--- a/turbo.json
+++ b/turbo.json
@@ -20,7 +20,11 @@
     "e2e": {
       "cache": false,
       "persistent": true,
-      "inputs": ["tests/**/*.ts"]
+      "inputs": ["tests/*,*/*.ts"]
+    },
+    "test": {
+      "cache": true,
+      "inputs": ["src/**/*.tsx", "src/**/*.ts"]
     }
   }
 }
